--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=estoquerp
-server.port = 8090
+server.port =
 
 # Dados de conexão com o banco H2
 spring.datasource.driverClassName=org.h2.Driver
