--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # CONFIG CONSUMO API VIACEP
-
+app.key.path-apicep=https://viacep.com.br/ws/
